# dreport

./: .gitignore  CLAUDE.md  Cargo.toml  ELEMENTS.md  IMPROVEMENTS.md  justfile
.cargo/: config.toml
.gitea/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: app.rs  font_registry.rs  lib.rs  main.rs
backend/src/models/: mod.rs
backend/src/routes/: fonts.rs  health.rs  mod.rs  render.rs
backend/src/typst_engine/: compiler.rs  fonts.rs  mod.rs
backend/tests/: api.rs
bindings/dotnet/: Dreport.Service.slnx
bindings/dotnet/src/Dreport.AspNetCore/: Dreport.AspNetCore.csproj  DreportEndpointRouteBuilderExtensions.cs  DreportOptions.cs  DreportServiceCollectionExtensions.cs
bindings/dotnet/src/Dreport.Service/: Dreport.Service.csproj  Exceptions.cs  FontFamily.cs  LayoutEngine.cs  Native.cs
bindings/dotnet/tests/Dreport.AspNetCore.Tests/: Dreport.AspNetCore.Tests.csproj  EndpointTests.cs
bindings/dotnet/tests/Dreport.Service.Tests/: Dreport.Service.Tests.csproj  LayoutEngineTests.cs
core/: Cargo.toml
core/src/: lib.rs  models.rs  template_to_typst.rs  wasm_api.rs
dreport-ffi/: Cargo.toml  build.rs  cbindgen.toml
dreport-ffi/src/: lib.rs
dreport-ffi/tests/: ffi.rs
dreport-service/: Cargo.toml
dreport-service/src/: error.rs  font_registry.rs  lib.rs
dreport-service/tests/: service.rs
frontend/: .npmrc  .oxfmtrc.json  eslint.config.js  package.json  playwright.config.ts  render-test.html  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/common/: DexprEditor.vue
frontend/src/components/editor/: EditorCanvas.vue  ElementHandle.vue  ElementToolbar.vue  InteractionOverlay.vue  LayoutRenderer.vue  MinimapOverlay.vue  RulerBar.vue  TypstSvgLayer.vue
frontend/src/components/editor/toolbars/: ChartToolbar.vue  ContainerToolbar.vue  TableToolbar.vue  TextToolbar.vue
frontend/src/components/panels/: PropertiesPanel.vue  SchemaTreeNode.vue  SchemaTreePanel.vue  ToolboxPanel.vue
frontend/src/components/properties/: BarcodeProperties.vue  CalculatedTextProperties.vue  ChartProperties.vue  CheckboxProperties.vue  ContainerProperties.vue  CurrentDateProperties.vue  ImageProperties.vue  LineProperties.vue  PaddingBox.vue  PageNumberProperties.vue  PositioningProperties.vue  RepeatingTableProperties.vue  RichTextProperties.vue  ShapeProperties.vue  SizeProperties.vue  TextProperties.vue
frontend/src/components/properties/shared/: PropCheckbox.vue  PropColorInput.vue  PropCondition.vue  PropFieldSelect.vue  PropNumberInput.vue  PropSection.vue  PropSelect.vue  PropTextStyleGroup.vue
frontend/src/components/properties/table/: TableColumnEditor.vue  TableStyleEditor.vue
frontend/src/composables/: useLayoutEngine.ts  usePropertyUpdate.ts  useSnapGuides.ts  useTypstCompiler.ts  useUndoRedo.ts
frontend/src/composables/__tests__/: useSnapGuides.test.ts  useUndoRedo.test.ts
frontend/src/core/: layout-types.ts  mock-data-generator.ts  schema-parser.ts  template-to-typst.ts  types.ts
frontend/src/core/__tests__/: mock-data-generator.test.ts  schema-parser.test.ts
frontend/src/core/wasm/: dreport_core.d.ts  dreport_core.js  dreport_core_bg.wasm.d.ts
frontend/src/directives/: tip.ts
frontend/src/lib/: DreportEditor.vue  index.ts
frontend/src/render-test/: RenderTestPage.vue  main.ts
frontend/src/stores/: editor.ts  schema.ts  template.ts
frontend/src/stores/__tests__/: editor.test.ts  improvements.test.ts  template.test.ts
frontend/src/styles/: editor.css  properties.css  toolbar.css
frontend/src/workers/: layout.worker.ts  typst.worker.ts
frontend/tests/visual/: cross-renderer.spec.ts  editor.spec.ts
layout-engine/: Cargo.toml
layout-engine/src/: barcode_gen.rs  chart_layout.rs  chart_render.rs  data_resolve.rs  expr_eval.rs  font_meta.rs  font_provider.rs  lib.rs  page_break.rs  pdf_render.rs  sizing.rs  table_layout.rs  text_measure.rs  tree.rs  wasm_api.rs
layout-engine/tests/: improvements_test.rs  layout_integration.rs  pdf_render_test.rs  visual_test.rs
layout-engine/tests/common/: mod.rs
layout-engine/tests/fixtures/: chart_test_data.json  chart_test_template.json  comprehensive_test_data.json  comprehensive_test_template.json  visual_test_data.json  visual_test_template.json
layout-engine/tests/snapshots/: chart_test_svg.html
