[package]
name = "dreport-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dreport-core = { path = "../core" }
dreport-layout = { path = "../layout-engine" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
thiserror = "2"
anyhow = "1"
