[package]
name = "dreport-backend"
version = "0.2.0"
edition = "2024"
publish = false

[dependencies]
dreport-service = { path = "../dreport-service" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
anyhow = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
