[package]
name = "dreport-core"
version = "0.1.0"
edition = "2024"
description = "Core models and types for dreport document design tool"
license = "MIT"
publish = ["gitea"]

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
