[package]
name = "dreport-service"
version = "0.2.0"
edition = "2024"
description = "High-level orchestration service for dreport (font registry + render pipeline)"
license = "MIT"
publish = ["gitea"]

[dependencies]
dreport-core = { version = "0.2.0", path = "../core", registry = "gitea" }
dreport-layout = { version = "0.2.0", path = "../layout-engine", registry = "gitea" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[features]
default = ["embedded-fonts"]
embedded-fonts = []

[dev-dependencies]
tempfile = "3"
